kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: file-upload
  labels:
    name: file-upload
    environment: lab
